--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-ScrapGeneral/script-s/funciones/__pycache__/
-ScrapGeneral/ListasURL
-ScrapGeneral/output
+script-s/funciones/__pycache__/
+ListasURL
+output
